--- a/samples/petclinic/build.properties
+++ b/samples/petclinic/build.properties
@@ -1,16 +1,16 @@
 # Ant properties for building the Spring petclinic demo/tutorial
 
 #CUSTOMIZE the HSQL database properties for the setupDB/test tasks 
-hsql.driver=org.hsqldb.jdbcDriver
-hsql.url=jdbc:hsqldb:hsql://localhost:9001
-hsql.user=sa
-hsql.pw=
+#hsql.driver=org.hsqldb.jdbcDriver
+#hsql.url=jdbc:hsqldb:hsql://localhost:9001
+#hsql.user=sa
+#hsql.pw=
 
 #CUSTOMIZE the MYSQL database properties for the setupDB/test tasks 
-mysql.driver=org.gjt.mm.mysql.Driver
+mysql.driver=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://localhost:3306/petclinic
-mysql.user=pc
-mysql.pw=pc
+mysql.user=root
+mysql.pw=jian031018
 
 #NOTE: To CONFIGURE the DATABASE  you will need to :
 #1. CUSTOMIZE the above database properties as needed. 
@@ -23,5 +23,5 @@ mysql.pw=pc
 #4. For both:
 #   UNCOMMENT ***ONE*** of the following lines to SELECT the database to use for the setupDB/test tasks
 
-useHSQL=
-#useMYSQL=
+#useHSQL=
+useMYSQL=useMYSQL
